--- a/Website_TiesVandePol/css/CV.css
+++ b/Website_TiesVandePol/css/CV.css
@@ -67,6 +67,12 @@ hr {
     margin-left: 0px;
 }
 
+.brSmall {
+    display: block;
+    height: 0.4em;
+    content: "";
+}
+
 /* Layout */
 .cv-container {
     margin-top: 50px;
@@ -86,11 +92,11 @@ hr {
     position: relative;
     width: 300px;
     height: 300px;
-    margin-top: 60px;
+    margin-top: 40px;
     margin-left: auto;
     margin-right: auto;
     overflow: hidden;
-    background-image: url(../img/ik.jpg);
+    background-image: url(../img/studio_achterkant.png);
     background-size: cover;
     background-position: center center;
     border: 3px var(--wit) solid;
@@ -195,17 +201,19 @@ header {
 
 header > div {
     display: block;
-    grid-column-start: 2;
-    grid-column-end: 4;
     padding: 10px 40px 10px 40px;
     text-align: left;
     width: 50%;
 }
 
-header > div > p {
+.contactBox > p {
     width: 100%;
     text-align: right;
     color: var(--blauw);
+}
+
+.contactBox {
+    display: flex;
 }
 
 #text1 {
