--- a/Website_TiesVandePol/css/Projects.css
+++ b/Website_TiesVandePol/css/Projects.css
@@ -20,13 +20,20 @@ html {
     font-family: 'Prompt', sans-serif;
 }
 
+i {
+    font-size: 1.1em;
+}
+
+h2 {
+    font-size: 1.6em;
+}
+
 /* Title Style */
 .title {
     margin-left: 60px;
     margin-top: 30px;
     font-size: 3em;
     font-weight: bold;
-    display: inline-block;
 }
 
 /* Layout */
@@ -36,6 +43,61 @@ html {
     display: flex;
     justify-content: center;
     padding-top: 300px;
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    border-radius: 30px;
+    width: 80%;
+    height: max-content;
+    text-align: center;
+    overflow: hidden;
+    border: 5px var(--wit) solid;
+    backdrop-filter: invert(10%) contrast(0.8) brightness(0.3) blur(1px);
+}
+
+.container > div > h1 {
+    margin-top: 30px;
+}
+
+.flex {
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 50px;
+    padding-bottom: 5px;
+}
+
+.display {
+    border: solid 5px var(--wit);
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.display > a > img {
+    display: block;
+    width: 500px;
+    margin-bottom: 0;
+}
+
+.display:hover {
+    border: 5px solid var(--lichtBlauw);
+}
+.subscript {
+    display: block;
+    width: 500px;
+    border-radius: 10px;
+    text-align: center;
+    overflow: hidden;
+}
+
+/* short Styles */
+.padTop10 {
+    padding-top: 10px;
 }
 
 /* Background Styles */
